# llmkit-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cov-lib-only.json
examples/: agent.rs  batch.rs  caching.rs  catalogue.rs  image.rs  middleware.rs  music.rs  quickstart.rs  reasoning.rs  streaming.rs  upload.rs  video.rs
src/: agent.rs  batch.rs  builders.rs  caching.rs  catalogue.rs  error.rs  http.rs  image.rs  job.rs  lib.rs  middleware.rs  models.rs  models_parsers.rs  music.rs  options.rs  paths.rs  request.rs  response.rs  sigv4.rs  speech.rs  stream.rs  structs.rs  telemetry.rs  transforms.rs  types.rs  uploads.rs  video.rs  wire.rs  wire_version.rs
src/builders/: agent.rs  batch.rs  catalogue.rs  image.rs  internal_tests.rs  mod.rs  music.rs  speech.rs  stream.rs  text.rs  transcription.rs  upload.rs  video.rs
src/providers/: mod.rs
tests/: builders.rs  builders_constructors.rs  catalogue.rs  catalogue_http.rs  examples.rs  image.rs  job.rs  lifecycle_wire.rs  main.rs  middleware.rs  models_parsers.rs  music.rs  no_default_contract.rs  options.rs  prompt.rs  provider_info.rs  request_wire.rs  response_wire.rs  responses.rs  sigv4_wire.rs  speech.rs  telemetry.rs  transcription.rs  video.rs  wire.rs
tests/common/: mod.rs  wire_inputs.rs
tests/integration/: builders_constructors.rs  catalogue.rs  image.rs  no_default_contract.rs  prompt.rs  request_wire.rs  responses.rs  telemetry.rs  transcription.rs  video.rs
