[package]
name = "llmkit"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Unified async LLM client library. One API for OpenAI, Anthropic, Google, Bedrock, and 23 other providers. Streaming, batches, tool-calling agents, image generation, and middleware."
repository = "https://github.com/aktagon/llmkit-rust"
homepage = "https://github.com/aktagon/llmkit-rust"
documentation = "https://docs.rs/llmkit"
readme = "README.md"
keywords = ["llm", "anthropic", "openai", "ai", "sdk"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "llmkit"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
mime_guess = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
