[package]
name = "llmkit"
version = "1.2.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Unified LLM client library for Rust — one API, 27 providers (Anthropic, OpenAI, Google Gemini, AWS Bedrock, Mistral, Groq, DeepSeek, +20 more), async via tokio + reqwest. Streaming, batches, tool-calling agents, image generation, middleware."
repository = "https://github.com/aktagon/llmkit-rust"
homepage = "https://llmkit.aktagon.com"
documentation = "https://docs.rs/llmkit"
readme = "README.md"
keywords = ["llm", "anthropic", "openai", "agents", "gemini"]
categories = ["api-bindings", "asynchronous"]
exclude = [
    "tests/**",
    "target/**",
    ".github/**",
    "*.lock",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "llmkit"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
mime_guess = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
